<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout android:layout_height="0dp"
        android:layout_weight="6"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="#fff">
        <EditText
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:gravity="center"
            android:background="@drawable/round_edit_text"
            android:theme="@style/EditText"
            android:padding="12dp"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:id="@+id/username"/>
        <RelativeLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content">
            <EditText
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:background="@drawable/round_edit_text"
                android:theme="@style/EditText"
                android:gravity="center"
                android:padding="12dp"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:id="@+id/password"/>
            <ImageButton
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:scaleType="centerInside"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@null"
                android:src="@drawable/hide"
                android:id="@+id/showHide"
                android:layout_alignLeft="@+id/password"
                android:layout_alignTop="@+id/password"
                android:layout_alignBottom="@+id/password"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="320dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/remember_password"
                android:theme="@style/CheckBox"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_password"/>
        </LinearLayout>
        <ImageButton
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/login"
            android:scaleType="centerInside"
            android:background="@null"
            android:layout_margin="50dp"
            android:id="@+id/login"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#000"
            android:textSize="16sp"
            android:text="@string/forget_password"
            android:id="@+id/forget_password"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="16sp"
            android:text="|"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#000"
            android:textSize="16sp"
            android:text="@string/register"
            android:id="@+id/register"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
</LinearLayout>